--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+  flex-direction: column;
 }
 
 .card {
@@ -98,6 +99,19 @@ body {
   border-radius: 12px;
 }
 
+footer {
+  margin: 20px;
+  font-weight: 500;
+  text-align: center;
+}
+
+footer a {
+  text-decoration: none;
+  color: white;
+  background-color: #4548f0;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
 @media screen and (max-width: 500px) {
   .card .link {
     flex-direction: column;
