--- a/style.css
+++ b/style.css
@@ -100,14 +100,14 @@ body {
   border-radius: 12px;
 }
 
-footer {
+.credit {
   line-height: 40px;
   margin: 20px;
   font-weight: 500;
   text-align: center;
 }
 
-footer a {
+.credit a {
   text-decoration: none;
   color: white;
   background-color: #4548f0;
